--- a/index.html
+++ b/index.html
@@ -104,12 +104,20 @@
       border-radius:var(--radius);
       overflow:hidden;
       min-height: 420px;
-      background:
-        linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.30)),
-        url("hero.PNG") center / cover no-repeat;
-      position:relative;
-      box-shadow:var(--shadow);
-    }
+      .heroPhoto{
+  height: calc(100vh - 78px); /* full screen minus the sticky header */
+  min-height: 560px;
+  border-radius: 0;          /* edge-to-edge */
+  border: none;
+  box-shadow: none;
+
+  background:
+    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.25)),
+    url("hero.PNG") center / cover no-repeat;
+
+  position: relative;
+  overflow: hidden;
+}
     .photoBadge{
       position:absolute;left:14px;bottom:14px;right:14px;
       border:1px solid rgba(35,35,58,.9);
